--- a/04 ■► React/final-app/src/components/Breadcrumb/index.module.css
+++ b/04 ■► React/final-app/src/components/Breadcrumb/index.module.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=index.module.css.map */
+.breadcrumb {
+  background-color: var(--header-top-color);
+  color: var(--text-negative-color);
+  padding: 5px 20px;
+  border: none;
+  border-bottom: 1px solid var(--borders-color);
+}/*# sourceMappingURL=index.module.css.map */
