--- a/04 ■► React/final-app/src/components/Header/index.module.css
+++ b/04 ■► React/final-app/src/components/Header/index.module.css
@@ -207,7 +207,8 @@
   outline: none;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
-  color: var(--text-color);
+  color: var(--searchbar-color);
+  background-color: var(--searchbar-bg);
   font-weight: 600;
 }
 .header__main_search__button {
