--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -223,7 +223,8 @@
                 outline: none;
                 border-top-left-radius: 4px;
                 border-bottom-left-radius: 4px;
-                color: var(--text-color);
+                color: var(--searchbar-color);
+                background-color: var(--searchbar-bg);
                 font-weight: 600;
             }
             &__button {
