--- a/04 ■► React/final-app/src/global.css
+++ b/04 ■► React/final-app/src/global.css
@@ -16,6 +16,8 @@
   --filter-shadow-color: rgb(10,10,10);
   --borders-color: rgb(45,45,45);
   --body-bg: linear-gradient(to right, rgb(250,150,10), rgb(10,250,150));
+  --searchbar-bg: rgb(250,250,250);
+  --searchbar-color: rgb(50,50,50);
   --slow-fx: ease-in-out 0.35s;
   --quick-fx: ease 0.15s;
   --instant-fx: linear 0s;
