--- a/04 ■► React/final-app/src/global.scss
+++ b/04 ■► React/final-app/src/global.scss
@@ -18,6 +18,8 @@
     --filter-shadow-color: rgb(10,10,10);
     --borders-color: rgb(45,45,45);
     --body-bg: linear-gradient(to right, rgb(250,150,10), rgb(10,250,150)); // to bottom right
+    --searchbar-bg: rgb(250,250,250);
+    --searchbar-color: rgb(50,50,50);
 
     // transition speeds
     --slow-fx: ease-in-out 0.35s;
