--- a/04 ■► React/final-app/src/pages/Homepage/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Homepage/index.module.scss
@@ -20,7 +20,7 @@
 .homepage {
     z-index: 1;
     width: 100%; // 100vw
-    height: 600px;
+    height: auto;
     // border: 1px solid var(--borders-color);
     border: none;
     border-bottom: 1px solid var(--borders-color);
@@ -30,11 +30,182 @@
     // justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 50px;
+    padding: 20px 10px;
+    transition: var(--quick-fx);
     &__categories {
-        width: 95%;
+        width: 1400px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        // border: 1px solid red;
+        &_topside {
+            width: 100%;
+            height: 40px;
+            // border: 1px solid green;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 50px;
+            margin-bottom: 20px;
+            border: none;
+            border-bottom: 1px solid var(--borders-color);
+            padding-bottom: 10px;
+            &__header {
+                font-size: 24px;
+                font-weight: 600;
+                text-transform: uppercase;
+            }
+            &__box {
+                // border: 1px solid blue;
+                width: 100px;
+                height: 40px;
+                display: flex;
+                gap: 20px;
+                &_buttons {
+                    width: 40px;
+                    height: 40px;
+                    border: 1px solid var(--borders-color);
+                    background-color: var(--buttons-color);
+                    color: var(--text-color);
+                    transition: var(--quick-fx);
+                    &:hover {
+                        background-color: var(--buttons-hover-color);
+                        color: var(--text-color);
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        background-color: var(--buttons-active-color);
+                        color: var(--text-color);
+                    }
+                }
+            }
+        }
+        &_container {
+            width: 100%;
+            height: 500px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            &__cards {
+                width: 200px;
+                height: 240px;
+                border: 1px solid var(--borders-color);
+                cursor: pointer;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                padding-bottom: 20px;
+                background-color: var(--searchbar-bg);
+                &_image {
+                    width: 100%;
+                    height: 200px;
+                    border: 1px solid var(--borders-color);
+                    overflow: hidden;
+                    &__content {
+                        width: 100%;
+                        height: 100%;
+                        padding: 10px;
+                        object-fit: contain;
+                    }
+                }
+                &_title {
+                    font-size: 16px;
+                    margin: 0 20px;
+                    color: var(--text-color);
+                }
+            }
+        }
     }
     &__brands {
-        width: 95%;
+        width: 1400px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        // border: 1px solid red;
+        &_topside {
+            width: 100%;
+            height: 40px;
+            // border: 1px solid green;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 50px;
+            margin-bottom: 20px;
+            border: none;
+            border-bottom: 1px solid var(--borders-color);
+            padding-bottom: 10px;
+            &__header {
+                font-size: 24px;
+                font-weight: 600;
+                text-transform: uppercase;
+            }
+            &__box {
+                // border: 1px solid blue;
+                width: 100px;
+                height: 40px;
+                display: flex;
+                gap: 20px;
+                &_buttons {
+                    width: 40px;
+                    height: 40px;
+                    border: 1px solid var(--borders-color);
+                    background-color: var(--buttons-color);
+                    color: var(--text-color);
+                    transition: var(--quick-fx);
+                    &:hover {
+                        background-color: var(--buttons-hover-color);
+                        color: var(--text-color);
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        background-color: var(--buttons-active-color);
+                        color: var(--text-color);
+                    }
+                }
+            }
+        }
+        &_container {
+            width: 100%;
+            height: 500px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            &__cards {
+                width: 200px;
+                height: 240px;
+                border: 1px solid var(--borders-color);
+                cursor: pointer;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                padding-bottom: 20px;
+                background-color: rgb(255,255,255);
+                &_image {
+                    width: 100%;
+                    height: 200px;
+                    border: 1px solid var(--borders-color);
+                    overflow: hidden;
+                    &__content {
+                        width: 100%;
+                        height: 100%;
+                        padding: 10px;
+                        object-fit: contain;
+                    }
+                }
+                &_title {
+                    font-size: 16px;
+                    margin: 0 20px;
+                    color: var(--text-color);
+                }
+            }
+        }
     }
     &__discount {
         width: 95%;
