--- a/04 ■► React/final-app/src/components/Header/index.module.css
+++ b/04 ■► React/final-app/src/components/Header/index.module.css
@@ -8,7 +8,7 @@
   border: none;
 }
 .header__list {
-  z-index: 1;
+  z-index: 2;
   position: relative;
   width: 100%;
   height: 40px;
@@ -61,7 +61,7 @@
   color: var(--link-active-color);
 }
 .header__list_productsdropdown {
-  z-index: 1;
+  z-index: 3;
   position: absolute;
   top: 100%;
   left: 30%;
@@ -133,7 +133,7 @@
 }
 .header__main {
   width: 100%;
-  height: 60px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -150,6 +150,8 @@
   width: 60px;
   height: 100%;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 .header__main_logo__content {
   width: 100%;
@@ -203,7 +205,7 @@
   padding-left: 10px;
   width: 70%;
   height: 30px;
-  border: none;
+  border: 1px solid var(--borders-color);
   outline: none;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
