--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -27,7 +27,7 @@
     border: none;
     // top navbar side of the header
     &__list {
-        z-index: 1;
+        z-index: 2;
         position: relative;
         width: 100%;
         height: 40px;
@@ -81,7 +81,7 @@
             }
         }
         &_productsdropdown {
-            z-index: 1;
+            z-index: 3;
             position: absolute;
             top: 100%;
             left: 30%;
@@ -153,7 +153,7 @@
     // bottom main side of the header
     &__main{
         width: 100%;
-        height: 60px;
+        height: 100px; //60px
         display: flex;
         justify-content: center;
         align-items: center;
@@ -169,6 +169,8 @@
             width: 60px;
             height: 100%;
             overflow: hidden;
+            display: flex;
+            align-items: center;
             &__content {
                 width: 100%;
                 object-fit: cover;
@@ -219,7 +221,7 @@
                 padding-left: 10px;
                 width: 70%;
                 height: 30px;
-                border: none;
+                border: 1px solid var(--borders-color);
                 outline: none;
                 border-top-left-radius: 4px;
                 border-bottom-left-radius: 4px;
