--- a/04 ■► React/final-app/src/pages/Homepage/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Homepage/index.module.scss
@@ -30,16 +30,115 @@
     // justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 50px;
-    padding: 20px 10px;
+    gap: 100px;
+    padding: 50px 10px;
     transition: var(--quick-fx);
+
     &__categories {
-        width: 1400px;
+        z-index: 0;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         // border: 1px solid red;
+        margin: 10px 0px;
+        padding: 0px 10px;
+        &_topside {
+            width: 100%;
+            height: 40px;
+            // border: 1px solid green;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px 50px;
+            margin-bottom: 20px;
+            border: none;
+            border-bottom: 1px solid var(--borders-color);
+            &__header {
+                font-size: 24px;
+                font-weight: 600;
+                text-transform: uppercase;
+            }
+            &__box {
+                // border: 1px solid blue;
+                width: 100px;
+                height: 40px;
+                display: flex;
+                gap: 20px;
+                &_buttons {
+                    width: 40px;
+                    height: 40px;
+                    border: 1px solid var(--borders-color);
+                    background-color: var(--buttons-color);
+                    color: var(--text-color);
+                    transition: var(--quick-fx);
+                    &:hover {
+                        background-color: var(--buttons-hover-color);
+                        color: var(--text-color);
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        background-color: var(--buttons-active-color);
+                        color: var(--text-color);
+                    }
+                }
+            }
+        }
+        &_container {
+            width: 100%;
+            height: 500px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            &__cards {
+                width: 200px;
+                height: 240px;
+                border: 1px solid var(--borders-color);
+                cursor: pointer;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                padding-bottom: 20px;
+                background-color: var(--searchbar-bg);
+                transition: var(--quick-fx);
+                &:hover {
+                    scale: 1.02;
+                    filter: drop-shadow(0 0 5px var(--filter-shadow-color));
+                }
+                &_image {
+                    width: 100%;
+                    height: 200px;
+                    border: 1px solid var(--borders-color);
+                    overflow: hidden;
+                    &__content {
+                        width: 100%;
+                        height: 100%;
+                        padding: 10px;
+                        object-fit: contain;
+                        background-color: transparentize(rgba(255,255,255,1.0), 1.0);
+                        mix-blend-mode: multiply;
+                    }
+                }
+                &_title {
+                    font-size: 16px;
+                    margin: 0 20px;
+                    color: var(--text-color);
+                }
+            }
+        }
+    }
+    &__brands {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        // border: 1px solid red;
+        margin: 10px 0px;
+        padding: 0px 10px;
         &_topside {
             width: 100%;
             height: 40px;
@@ -100,6 +199,11 @@
                 overflow: hidden;
                 padding-bottom: 20px;
                 background-color: var(--searchbar-bg);
+                transition: var(--quick-fx);
+                &:hover {
+                    scale: 1.02;
+                    filter: drop-shadow(0 0 5px var(--filter-shadow-color));
+                }
                 &_image {
                     width: 100%;
                     height: 200px;
@@ -110,93 +214,8 @@
                         height: 100%;
                         padding: 10px;
                         object-fit: contain;
-                    }
-                }
-                &_title {
-                    font-size: 16px;
-                    margin: 0 20px;
-                    color: var(--text-color);
-                }
-            }
-        }
-    }
-    &__brands {
-        width: 1400px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        // border: 1px solid red;
-        &_topside {
-            width: 100%;
-            height: 40px;
-            // border: 1px solid green;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 50px;
-            margin-bottom: 20px;
-            border: none;
-            border-bottom: 1px solid var(--borders-color);
-            padding-bottom: 10px;
-            &__header {
-                font-size: 24px;
-                font-weight: 600;
-                text-transform: uppercase;
-            }
-            &__box {
-                // border: 1px solid blue;
-                width: 100px;
-                height: 40px;
-                display: flex;
-                gap: 20px;
-                &_buttons {
-                    width: 40px;
-                    height: 40px;
-                    border: 1px solid var(--borders-color);
-                    background-color: var(--buttons-color);
-                    color: var(--text-color);
-                    transition: var(--quick-fx);
-                    &:hover {
-                        background-color: var(--buttons-hover-color);
-                        color: var(--text-color);
-                    }
-                    &:active {
-                        transition: var(--instant-fx);
-                        background-color: var(--buttons-active-color);
-                        color: var(--text-color);
-                    }
-                }
-            }
-        }
-        &_container {
-            width: 100%;
-            height: 500px;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            &__cards {
-                width: 200px;
-                height: 240px;
-                border: 1px solid var(--borders-color);
-                cursor: pointer;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                overflow: hidden;
-                padding-bottom: 20px;
-                background-color: rgb(255,255,255);
-                &_image {
-                    width: 100%;
-                    height: 200px;
-                    border: 1px solid var(--borders-color);
-                    overflow: hidden;
-                    &__content {
-                        width: 100%;
-                        height: 100%;
-                        padding: 10px;
-                        object-fit: contain;
+                        background-color: transparentize(rgba(255,255,255,1.0), 1.0);
+                        mix-blend-mode: multiply;
                     }
                 }
                 &_title {
@@ -208,7 +227,14 @@
         }
     }
     &__discount {
-        width: 95%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        // border: 1px solid red;
+        margin: 10px 0px;
+        padding: 0px 10px;
     }
 }
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
