--- a/04 ■► React/final-app/src/pages/Homepage/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Homepage/index.module.scss
@@ -19,7 +19,7 @@
 
 .homepage {
     z-index: 1;
-    width: 100%; // 100vw
+    width: 100vw; // 100vw 100%
     height: auto;
     // border: 1px solid var(--borders-color);
     border: none;
@@ -30,17 +30,17 @@
     // justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 100px;
-    padding: 50px 10px;
+    gap: 40px;
+    padding: 140px 0px 0px 0px;
     transition: var(--quick-fx);
-
-    &__categories {
+    &__sections {
         z-index: 0;
-        width: 100%;
+        width: 1400px;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        overflow: hidden;
         // border: 1px solid red;
         margin: 10px 0px;
         padding: 0px 10px;
@@ -51,10 +51,10 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 10px 50px;
-            margin-bottom: 20px;
+            padding: 30px 50px;
+            margin-bottom: 40px;
             border: none;
-            border-bottom: 1px solid var(--borders-color);
+            border-bottom: 4px solid var(--borders-color);
             &__header {
                 font-size: 24px;
                 font-weight: 600;
@@ -104,6 +104,7 @@
                 padding-bottom: 20px;
                 background-color: var(--searchbar-bg);
                 transition: var(--quick-fx);
+                position: absolute;
                 &:hover {
                     scale: 1.02;
                     filter: drop-shadow(0 0 5px var(--filter-shadow-color));
@@ -129,112 +130,6 @@
                 }
             }
         }
-    }
-    &__brands {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        // border: 1px solid red;
-        margin: 10px 0px;
-        padding: 0px 10px;
-        &_topside {
-            width: 100%;
-            height: 40px;
-            // border: 1px solid green;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 50px;
-            margin-bottom: 20px;
-            border: none;
-            border-bottom: 1px solid var(--borders-color);
-            padding-bottom: 10px;
-            &__header {
-                font-size: 24px;
-                font-weight: 600;
-                text-transform: uppercase;
-            }
-            &__box {
-                // border: 1px solid blue;
-                width: 100px;
-                height: 40px;
-                display: flex;
-                gap: 20px;
-                &_buttons {
-                    width: 40px;
-                    height: 40px;
-                    border: 1px solid var(--borders-color);
-                    background-color: var(--buttons-color);
-                    color: var(--text-color);
-                    transition: var(--quick-fx);
-                    &:hover {
-                        background-color: var(--buttons-hover-color);
-                        color: var(--text-color);
-                    }
-                    &:active {
-                        transition: var(--instant-fx);
-                        background-color: var(--buttons-active-color);
-                        color: var(--text-color);
-                    }
-                }
-            }
-        }
-        &_container {
-            width: 100%;
-            height: 500px;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            &__cards {
-                width: 200px;
-                height: 240px;
-                border: 1px solid var(--borders-color);
-                cursor: pointer;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                overflow: hidden;
-                padding-bottom: 20px;
-                background-color: var(--searchbar-bg);
-                transition: var(--quick-fx);
-                &:hover {
-                    scale: 1.02;
-                    filter: drop-shadow(0 0 5px var(--filter-shadow-color));
-                }
-                &_image {
-                    width: 100%;
-                    height: 200px;
-                    border: 1px solid var(--borders-color);
-                    overflow: hidden;
-                    &__content {
-                        width: 100%;
-                        height: 100%;
-                        padding: 10px;
-                        object-fit: contain;
-                        background-color: transparentize(rgba(255,255,255,1.0), 1.0);
-                        mix-blend-mode: multiply;
-                    }
-                }
-                &_title {
-                    font-size: 16px;
-                    margin: 0 20px;
-                    color: var(--text-color);
-                }
-            }
-        }
-    }
-    &__discount {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        // border: 1px solid red;
-        margin: 10px 0px;
-        padding: 0px 10px;
     }
 }
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
