--- a/04 ■► React/final-app/src/pages/Homepage/index.module.css
+++ b/04 ■► React/final-app/src/pages/Homepage/index.module.css
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 40px;
+  gap: 150px;
   padding: 140px 0px 0px 0px;
   transition: var(--quick-fx);
 }
@@ -65,12 +65,15 @@
 }
 .homepage__sections_container {
   width: 100%;
-  height: 500px;
+  height: 240px;
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 0px;
   overflow: hidden;
   position: relative;
+  border: none;
+  border-left: 3px solid var(--borders-color);
+  border-right: 3px solid var(--borders-color);
 }
 .homepage__sections_container__cards {
   width: 200px;
