--- a/04 ■► React/final-app/src/pages/Homepage/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Homepage/index.module.scss
@@ -30,7 +30,7 @@
     // justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 40px;
+    gap: 150px;
     padding: 140px 0px 0px 0px;
     transition: var(--quick-fx);
     &__sections {
@@ -87,13 +87,16 @@
         }
         &_container {
             width: 100%;
-            height: 500px;
+            height: 240px;
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 0px;
             overflow: hidden;
             // border: 1px solid red;
             position: relative;
+            border: none;
+            border-left: 3px solid var(--borders-color);
+            border-right: 3px solid var(--borders-color);
             &__cards {
                 width: 200px;
                 height: 240px;
