--- a/04 ■► React/final-app/src/pages/About/index.module.scss
+++ b/04 ■► React/final-app/src/pages/About/index.module.scss
@@ -29,7 +29,7 @@
     // justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 20px 0px;
+    padding: 140px 0px 0px 0px;
     &__container {
         width: 95%;
         border: 1px solid red;
