--- a/04 ■► React/final-app/src/pages/About/index.module.css
+++ b/04 ■► React/final-app/src/pages/About/index.module.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding: 20px 0px;
+  padding: 140px 0px 0px 0px;
 }
 .about__container {
   width: 95%;
