--- a/04 ■► React/final-app/src/pages/Contact/index.module.css
+++ b/04 ■► React/final-app/src/pages/Contact/index.module.css
@@ -1,1 +1,12 @@
-/*# sourceMappingURL=index.module.css.map */
+.contact {
+  z-index: 1;
+  width: 100%;
+  height: 600px;
+  border: none;
+  background-color: var(--default-bg-color);
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 140px 0px 0px 0px;
+}/*# sourceMappingURL=index.module.css.map */
