--- a/04 ■► React/final-app/src/pages/MyCart/index.module.css
+++ b/04 ■► React/final-app/src/pages/MyCart/index.module.css
@@ -1,1 +1,16 @@
-/*# sourceMappingURL=index.module.css.map */
+.mycart {
+  z-index: 1;
+  width: 100%;
+  height: 600px;
+  border: none;
+  background-color: var(--default-bg-color);
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 140px 0px 0px 0px;
+}
+.mycart__container {
+  width: 95%;
+  border: 1px solid red;
+}/*# sourceMappingURL=index.module.css.map */
