--- a/04 ■► React/final-app/src/pages/About/index.module.scss
+++ b/04 ■► React/final-app/src/pages/About/index.module.scss
@@ -98,6 +98,7 @@
                 top: 50%;
                 left: 0;
                 transform: translate(0%, -50%);
+                transition: var(--quick-fx);
                 &_content {
                     width: 100%;
                     height: 100%;
