--- a/04 ■► React/final-app/src/pages/Contact/index.module.css
+++ b/04 ■► React/final-app/src/pages/Contact/index.module.css
@@ -1,12 +1,52 @@
 .contact {
   z-index: 1;
   width: 100%;
-  height: 600px;
+  height: auto;
   border: none;
   background-color: var(--default-bg-color);
   color: var(--text-color);
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 140px 0px 0px 0px;
+  padding: 0px 20px 40px 20px;
+  transition: var(--quick-fx);
+}
+.contact__container {
+  width: 1400px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.contact__container_headers {
+  font-size: 28px;
+  font-weight: 600;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-left: 5px solid var(--link-hover-color);
+  letter-spacing: 2px;
+  margin: 100px 0px 20px 25px;
+  padding-left: 10px;
+}
+.contact__container_text {
+  font-size: 20px;
+  line-height: 110%;
+}
+.contact__container_map {
+  width: 640px;
+  height: 360px;
+  border: 2px solid var(--borders-color);
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: 600;
+  font-size: 30px;
+  padding: 40px;
+  display: flex;
+  opacity: 0.5;
 }/*# sourceMappingURL=index.module.css.map */
