--- a/04 ■► React/final-app/src/pages/Contact/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Contact/index.module.scss
@@ -19,15 +19,54 @@
 .contact {
     z-index: 1;
     width: 100%; // 100%
-    height: 600px;
+    height: auto;
     // border: 1px solid var(--borders-color);
     border: none;
     background-color: var(--default-bg-color);
     color: var(--text-color);
     display: flex;
-    // justify-content: center;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 140px 0px 0px 0px;
+    padding: 0px 20px 40px 20px; // top right bottom left
+    transition: var(--quick-fx);
+    &__container {
+        width: 1400px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        &_headers {
+            font-size: 28px;
+            font-weight: 600;
+            width: 100%;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            border: none;
+            border-left: 5px solid var(--link-hover-color);
+            letter-spacing: 2px;
+            margin: 100px 0px 20px 25px; // top right bottom left
+            padding-left: 10px;
+        }
+        &_text {
+            font-size: 20px;
+            line-height: 110%;
+        }
+        &_map {
+            width: 640px;
+            height: 360px;
+            border: 2px solid var(--borders-color);
+            border-radius: 4px;
+            justify-content: center; // temporary for note
+            align-items: center; // temporary for note
+            text-align: center; // temporary for note
+            font-weight: 600; // temporary for note
+            font-size: 30px; // temporary for note
+            padding: 40px; // temporary for note
+            display: flex; // temporary for note
+            opacity: 0.5; // temporary for note
+        }
+    }
 }
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
