--- a/04 ■► React/final-app/src/pages/Homepage/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Homepage/index.module.scss
@@ -23,7 +23,7 @@
     height: auto;
     // border: 1px solid var(--borders-color);
     border: none;
-    border-bottom: 1px solid var(--borders-color);
+    // border-bottom: 1px solid var(--borders-color);
     background-color: var(--default-bg-color);
     color: var(--text-color);
     display: flex;
