--- a/04 ■► React/final-app/src/pages/Products/index.module.css
+++ b/04 ■► React/final-app/src/pages/Products/index.module.css
@@ -1,1 +1,171 @@
-/*# sourceMappingURL=index.module.css.map */
+.products {
+  z-index: 1;
+  width: 100%;
+  height: auto;
+  background-color: var(--default-bg-color);
+  color: var(--text-color);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0px 10px 40px 10px;
+  transition: var(--quick-fx);
+  flex-wrap: wrap;
+}
+.products__topside {
+  width: 100%;
+  height: 30px;
+  background-color: var(--default-bg-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 700px;
+  border: none;
+  border-bottom: 1px solid var(--borders-color);
+  margin-bottom: 10px;
+}
+.products__topside_filterbtn {
+  width: 60px;
+  height: auto;
+  padding: 2px;
+  border: 1px solid var(--borders-color);
+  border-radius: 2px;
+  color: var(--link-color);
+  background-color: var(--buttons-color);
+  transition: var(--quick-fx);
+  font-weight: 600;
+}
+.products__topside_filterbtn:hover {
+  background-color: var(--buttons-hover-color);
+  color: var(--link-hover-color);
+}
+.products__topside_filterbtn:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
+  color: var(--link-active-color);
+}
+.products__topside_sort {
+  border: none;
+  outline: none;
+  color: var(--text-color);
+  background-color: transparent;
+  font-weight: 600;
+}
+.products__topside_sort option {
+  background-color: var(--default-bg-color);
+}
+.products .tempdiv {
+  width: 300px;
+  height: 400px;
+  border: 1px solid green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: var(--slow-fx);
+}
+.products .container {
+  width: 1100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid yellow;
+  padding: 20px;
+  transition: var(--slow-fx);
+}
+.products .container .products__cards {
+  border: 1px solid var(--borders-color);
+  width: 300px;
+  height: 450px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 6px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: var(--quick-fx);
+}
+.products .container .products__cards:hover {
+  filter: drop-shadow(0 0 6px var(--filter-shadow-color));
+  scale: 1.03;
+}
+.products .container .products__cards_image {
+  width: 100%;
+  height: 300px;
+  border: none;
+  border-bottom: 1px solid var(--borders-color);
+  overflow: hidden;
+  position: relative;
+}
+.products .container .products__cards_image__content {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.products .container .products__cards_image__favbtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  opacity: 0.5;
+  width: 50px;
+  height: 50px;
+  background-color: var(--buttons-color);
+  color: var(--link-color);
+  border: 1px solid var(--borders-color);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  transition: var(--quick-fx);
+}
+.products .container .products__cards_image__favbtn:hover {
+  background-color: var(--buttons-hover-color);
+  opacity: 0.9;
+  color: var(--link-hover-color);
+}
+.products .container .products__cards_image__favbtn:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
+  opacity: 1;
+  color: var(--link-active-color);
+}
+.products .container .products__cards_information {
+  width: 100%;
+  height: auto;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.products .container .products__cards_information__titleandcateg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.products .container .products__cards_information__titleandcateg_title {
+  font-size: 16px;
+  font-weight: 600;
+}
+.products .container .products__cards_information__titleandcateg_categ {
+  font-size: 14px;
+  opacity: 0.5;
+  font-style: italic;
+  align-self: flex-start;
+}
+.products .container .products__cards_information__rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+}
+.products .container .products__cards_information__rating_stars {
+  color: var(--link-hover-color);
+}
+.products .container .products__cards_information__rating_point {
+  opacity: 0.9;
+}
+.products .container .products__cards_information__description {
+  font-size: 14px;
+}
+.products .container .products__cards_information__price {
+  font-weight: 900;
+}/*# sourceMappingURL=index.module.css.map */
